kubernetes/beta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beta
  namespace: default
  labels:
    app: beta
    component: service
spec:
  ports:
    - name: grpc-port #important to name for istio
      port: 9000
  selector:
    app: beta
